--- a/baitapArrowFunc/index.html
+++ b/baitapArrowFunc/index.html
@@ -35,7 +35,7 @@
                     <div class="house-window house-window-right"></div>
                 </div>
             </div>
-            <div class="house-roof" style="background-color: #B888F8">
+            <div class="house-roof">
                 <div class="house-roof-side house-roof-side-left"></div>
                 <div class="house-roof-side house-roof-side-right"></div>
                 <div class="house-roof-detail"></div>
